<resources>
    <string name="app_name">TEA2_ClientM_AymerichS</string>
    <string name="tv_acces">Accès</string>
    <string name="nom_usuari">Nom Usuari</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="login">Entrada</string>
    <string name="fem_coworking">FEM Coworking</string>
    <string name="gestionar_reserves">Gestionar Reserves</string>
    <string name="canviar_contrasenya">Canviar Contrasenya</string>
    <string name="sortir">Sortir</string>
    <string name="tancar_sessi">Tancar Sessió</string>
    <string name="fem_coworking_user">FEM Coworking</string>
    <string name="inici">Inici</string>
    <string name="facturaci">Facturació</string>
    <string name="cancelar">Cancelar</string>
    <string name="gestionar_sales">Gestionar Sales</string>
    <string name="enviar">Enviar</string>
    <string name="introdueix_la_nova_contrasenya">Introdueix la nova contrasenya</string>
    <string name="s_administrador">És Administrador</string>
    <string name="veure_factures">Veure Factures</string>
    <string name="veure_reserves_user">veure reserves</string>
    <string name="encara_no_soc_usuari">Encara no soc usuari</string>
    <string name="tv_rol_registre">Rol</string>
    <string name="tv_cif_empresa">CIF Empresa</string>
    <string name="tv_nom_registre">Nom</string>
    <string name="registre">Registre</string>
    <string name="bt_registrar_registre">Registrar</string>
    <string name="tv_poblacio_registre">Població</string>
    <string name="tv_provincia_registre">Provincia</string>
    <string name="tv_direccio_registre">Direcció</string>
    <string name="tv_email_registre">Email</string>
    <string name="b_tornar_registre">Tornar</string>
    <string name="gesti_de_reserves">Gestió de Reserves</string>
    <string name="deshabilitar_sala">Deshabilitar Sala</string>
    <string name="editar_sala">Editar Sala</string>
    <string name="llistar_sales">Llistar Sales</string>
    <string name="enrere">Enrere</string>
    <string name="reservar_sales">Reservar Sales</string>
    <string name="llistar_reserves">Llistar Reserves</string>
    <string name="eliminar_reserva">Eliminar Reserva</string>
    <string name="editar_reserva">Editar Reserva</string>
    <string name="crear_oficina">Crear Sala</string>
    <string name="direccio">Direcció</string>
    <string name="capacitat">Capacitat</string>
    <string name="preu_per_dia">Preu per dia</string>
    <string name="serveis_de_la_oficina">Serveis de la Oficina</string>
    <string name="provincia_oficina">Provincia</string>
    <string name="poblacio_oficina">Població</string>
    <string name="crear_una_nova_oficina">Crear una nova Oficina</string>
    <string name="nom_de_la_oficina">Nom de la Oficina</string>
    <string name="tipus_d_oficina">Tipus d\'Oficina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminada">Eliminada</string>
    <string name="habiltada">Habiltada</string>
    <string name="idoficina">idOficina</string>
    <string name="habilitada">Habilitada</string>
    <string name="eliminada_text">Eliminada</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="id_reserva">ID Reserva</string>>
    <string name="data_inici_reserva">Data inici Reserva</string>
    <string name="data_final_reserva">Data Final Reserva</string>
    <string name="id_oficina_reservada">ID oficina reservada</string>
    <string name="id_usuari_reserva">ID usuari reserva</string>
    <string name="crear_reserva">Crear Reserva</string>
    <string name="data_inici">Data Inici</string>
    <string name="data_sortida">Data Sortida</string>
    <string name="buscar_oficines">Buscar Oficines</string>
    <string name="confirmar_contrasenya">Confirmar contrasenya</string>
    <string name="nom_de_l_oficina">Nom de l\'oficina</string>
    <string name="tipus_d_oficina_reserva">Tipus d\'Oficina</string>
    <string name="provincia_reserva">Provincia</string>
    <string name="preu_reserva">Preu</string>
</resources>