<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aymerich.ioc.cat.tea2_clientm_aymerichs.activities.MainActivity">


    <Button
        android:id="@+id/b_facturacio_admin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="326dp"
        android:text="@string/facturaci" />

    <Button
        android:id="@+id/b_gestionar_sala"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:text="@string/gestionar_sales" />

    <Button
        android:id="@+id/b_gestionar_reserves"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_gestionar_sala"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/gestionar_reserves" />


    <Button
        android:id="@+id/b_logout_admin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="384dp"
        android:text="@string/tancar_sessi" />

    <Button
        android:id="@+id/b_sortir_admin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="443dp"
        android:text="@string/sortir" />

    <TextView
        android:id="@+id/reserves_tv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:text="@string/inici"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_titol_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="@string/fem_coworking_user"
        android:textSize="18sp"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/nom_usuari_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/et_canvi_pass_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/et_canvi_pass_confirmar_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="239dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_enviar_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_canvi_pass_admin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:text="@string/enviar"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bt_cancelar_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_enviar_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/cancelar"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/introduex_pass_tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="140dp"
        android:text="@string/introdueix_la_nova_contrasenya"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_canviar_contrasenya_admin"
        android:layout_width="53dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:clickable="true"
        app:srcCompat="@drawable/unnamed" />

</RelativeLayout>