<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aymerich.ioc.cat.tea2_clientm_aymerichs.activities.MainActivity">


    <TextView
        android:id="@+id/tv_registre_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="168dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tv_acces"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_email_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_registre_registre"
        android:layout_alignStart="@+id/tv_registre_registre"
        android:layout_alignLeft="@+id/tv_registre_registre"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:text="@string/nom_usuari"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_email_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email_registre"
        android:ems="17"
        android:layout_alignLeft="@+id/tv_email_registre"
        android:autofillHints=""
        android:layout_alignStart="@+id/tv_email_registre" />


    <TextView
        android:id="@+id/tv_password_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_registre"
        android:layout_alignStart="@+id/et_email_registre"
        android:layout_alignLeft="@+id/et_email_registre"
        android:layout_marginTop="33dp"
        android:fontFamily="monospace"
        android:text="@string/contrasenya"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="17"
        android:layout_below="@+id/tv_password_registre"
        android:layout_alignLeft="@+id/tv_password_registre"
        android:layout_alignStart="@+id/tv_password_registre"
        android:autofillHints="" />


    <Button
        android:id="@+id/b_enviar_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_registre"
        android:layout_centerInParent="true"
        android:layout_marginTop="47dp"
        android:ems="12"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_titol_registre"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/fem_coworking"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="194dp"
        android:text="@string/encara_no_soc_usuari" />

</RelativeLayout>